k8s/applications/ddns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns
spec:
  selector:
    matchLabels:
      app: ddns
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ddns
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ddns
          image: qmcgaw/ddns-updater:v2.10.0
          ports:
            - name: ingress
              containerPort: 8000
          volumeMounts:
            - name: ddns
              mountPath: /updater/data
      volumes:
        - name: ddns
          persistentVolumeClaim:
            claimName: ddns
      resources:
        limits:
          memory: 128Mi
        requests:
          cpu: 10m
          memory: 128Mi
