k8s/applications/ddns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
